--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,5 +2,8 @@
   background-color: rgb(44, 44, 44);
   width: 1000px;
   min-height: 800px;
-  margin: 0 auto;
+  margin: 4px auto;
+  border-radius: 8px;
+  box-sizing: border-box;
+  overflow: hidden;
 }
