--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+
+  --block: #2b2b2b;
+  --block-hover: #313131;
+
+  --black-transparent-3: #000000b0;
+
+  --input: #464646;
+  --input-focus: #535353;
+
+  --font: #e2e2e2;
+  --font-hover: #aaaaaa;
+  --font-wrong: #ff0909;
+
+  --border: #313131;
+  --border-2: #444444;
+  --border-3: #5a5a5a;
+  --border-4: #818181;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
