--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
   background-color: rgb(83, 83, 83);
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   .items {
     display: flex;
     flex-direction: row;
@@ -15,6 +16,21 @@
       color: black;
       transition: .2s background-color;
       &:hover {
+        background-color: rgba(0, 0, 0, 0.082);
+      }
+    }
+  }
+  .itemsRight {
+    display: flex;
+    flex-direction: row;
+    .itemRight {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 10px;
+      transition: .2s background-color;
+      &:hover {
+        cursor: pointer;
         background-color: rgba(0, 0, 0, 0.082);
       }
     }
