--- a/src/components/Chats/Chats.module.scss
+++ b/src/components/Chats/Chats.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   .createNewChat {
     background-color: rgb(63, 63, 63);
-    margin: 10px;
+    margin: 10px 10px 0 10px;
     border-radius: 10px;
     form {
       display: inline-block;
@@ -74,5 +74,28 @@
   .list {
     display: flex;
     flex-direction: column;
+  }
+  .fetching {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    img {
+      width: 40px;
+      height: 40px;
+      animation-name: rotation;
+      animation-duration: 1.5s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+    }
+  }
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
