--- a/src/components/Chats/ListItem/ListItem.module.scss
+++ b/src/components/Chats/ListItem/ListItem.module.scss
@@ -68,11 +68,80 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     &.show {
       height: 40px;
     }
+    .renameChat {
+      width: 85%;
+      form {
+        display: inline-block;
+        width: 100%;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        .inputBlock {
+          position: relative;
+          padding: 0 10px 0 0;
+          width: calc(100% - 100px);
+          input {
+            width: 100%;
+            box-sizing: border-box;
+            border: 0px solid transparent;
+            color: var(--font);
+            background-color: var(--input);
+            padding: 8px;
+            transition: 0.1s background-color;
+            &:focus {
+              outline: none;
+            }
+            &:-internal-autofill-selected {
+              appearance: menulist-button;
+              background-color: var(--input) !important;
+              background-image: none !important;
+              color: var(--font) !important;
+            }
+          }
+          .error {
+            position: absolute;
+            left: 325px;
+            top: 8px;
+            font-size: 13px;
+            color: var(--font-wrong);
+            width: max-content;
+          }
+        }
+        .buttons {
+          display: flex;
+          justify-content: space-between;
+          align-items: flex-end;
+          height: 100%;
+          button {
+            background-color: var(--grey-2);
+            border-radius: 4px;
+            border: 0px;
+            transition: .2s background-color;
+            color: rgb(0, 0, 0);
+            font-size: 17px;
+            &:hover {
+              cursor: pointer;
+              background-color: var(--grey-1);
+            }
+            &:focus {
+              outline: none;
+              background-color: var(--block);
+            }
+            &.submit {
+              width: 100%;
+              height: 100%;
+            }
+          }
+        }
+      }
+    }
     .removeChatButton {
-      width: 80px;
+      width: 10%;
       height: 30px;
       border-radius: 4px;
       display: flex;
