--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ body {
   --block: #2b2b2b;
   --block-hover: #313131;
 
+  --grey-1: #313131;
+  --grey-2: #444444;
+  --grey-3: #5a5a5a;
+  --grey-4: #818181;
+
   --black-transparent-3: #000000b0;
 
   --input: #464646;
