--- a/src/components/Chats/Chats.module.scss
+++ b/src/components/Chats/Chats.module.scss
@@ -53,7 +53,7 @@
         background-color: var(--block);
         border-radius: 8px;
         border: 0px;
-        transition: .2s background-color;
+        transition: .2s background-color, .2s color;
         color: white;
         font-size: 17px;
         &:hover {
@@ -67,6 +67,11 @@
         &.submit {
           width: 100%;
           height: 100%;
+        }
+        &.disabled {
+          pointer-events: none;
+          color: #757575;
+          background-color: #5d5d5d;
         }
       }
     }
