--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -4,6 +4,40 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: inherit;
+  .messages {
+    padding: 10px;
+    .message {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      &:not(:first-child) {
+        margin-top: 10px;
+      }
+      .user {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        img {
+          width: 50px;
+          height: 50px;
+        }
+        .userName {
+          font-size: 14px;
+          color: #c7c7c7;
+        }
+      }
+
+      .cloudMessage {
+        background-color: #b1b1b1;
+        height: fit-content;
+        padding: 10px;
+        border-radius: 8px;
+        margin-left: 10px;
+      }
+    }
+  }
+
+
   .createMessage {
     background-color: rgb(63, 63, 63);
     margin: 10px 10px 10px 10px;
