--- a/src/components/Chats/ListItem/ListItem.module.scss
+++ b/src/components/Chats/ListItem/ListItem.module.scss
@@ -1,16 +1,18 @@
 .wrapper {
   position: relative;
-  background-color: rgb(110, 110, 110);
+  // background-color: #b1b1b1;
   box-sizing: border-box;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
   padding: 5px 15px;
   margin: 10px 10px 0px 10px;
-  transition: .2s border-color;
+  transition: .2s border-color, .2s background-color;
   border: 1px solid #6e6e6e;
+  box-shadow: 1px 1px 1px 0px #6e6e6e;
   &:hover {
     border-color: #b7b7b7;
+    background-color: rgba(255, 255, 255, 0.055);
   }
   .mainBlock {
     display: flex;
@@ -25,7 +27,7 @@
       width: 75%;
       justify-content: space-between;
       text-decoration: none;
-      color: rgb(32, 32, 32);
+      color: #c7c7c7;
       .title {
         display: flex;
         justify-content: center;
@@ -37,6 +39,7 @@
       flex-direction: row;
       width: 24%;
       justify-content: flex-end;
+      color: #c7c7c7;
       .userInfo {
         display: flex;
         flex-direction: column;
