--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -4,23 +4,29 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: inherit;
+
   .messages {
     padding: 10px;
+
     .message {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
+      align-items: center;
       &:not(:first-child) {
         margin-top: 10px;
       }
+
       .user {
         display: flex;
         flex-direction: column;
         align-items: center;
+
         img {
           width: 50px;
           height: 50px;
         }
+
         .userName {
           font-size: 14px;
           color: #c7c7c7;
@@ -28,11 +34,23 @@
       }
 
       .cloudMessage {
+        position: relative;
         background-color: #b1b1b1;
         height: fit-content;
         padding: 10px;
         border-radius: 8px;
-        margin-left: 10px;
+        margin-left: 20px;
+
+        &::after {
+          content: '';
+          position: absolute;
+          left: -12px;
+          bottom: 50%;
+          transform: translateY(50%);
+          border: 6px solid transparent;
+          border-right: 6px solid #b1b1b1;
+          border-top: 6px solid #b1b1b1;
+        }
       }
     }
   }
@@ -42,6 +60,7 @@
     background-color: rgb(63, 63, 63);
     margin: 10px 10px 10px 10px;
     border-radius: 10px;
+
     form {
       display: inline-block;
       width: 100%;
@@ -49,10 +68,12 @@
       flex-direction: row;
       align-items: center;
     }
+
     .inputBlock {
       position: relative;
       padding: 0 10px;
       width: calc(100% - 100px);
+
       input {
         width: 100%;
         box-sizing: border-box;
@@ -61,9 +82,11 @@
         background-color: var(--input);
         padding: 8px;
         transition: 0.1s background-color;
+
         &:focus {
           outline: none;
         }
+
         &:-internal-autofill-selected {
           appearance: menulist-button;
           background-color: var(--input) !important;
@@ -71,6 +94,7 @@
           color: var(--font) !important;
         }
       }
+
       .error {
         position: absolute;
         left: 325px;
@@ -80,6 +104,7 @@
         width: max-content;
       }
     }
+
     .buttons {
       display: flex;
       justify-content: space-between;
@@ -87,6 +112,7 @@
       width: 100px;
       height: 40px;
       padding: 5px;
+
       button {
         background-color: var(--block);
         border-radius: 8px;
@@ -94,18 +120,22 @@
         transition: .2s background-color, .2s color;
         color: white;
         font-size: 17px;
+
         &:hover {
           cursor: pointer;
           background-color: var(--block-hover);
         }
+
         &:focus {
           outline: none;
           background-color: var(--block);
         }
+
         &.submit {
           width: 100%;
           height: 100%;
         }
+
         &.disabled {
           pointer-events: none;
           color: #757575;
