--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -3,11 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: inherit;
+  height: inherit;
 
   .messages {
     padding: 10px;
-
+    overflow: auto;
     .message {
       display: flex;
       flex-direction: row;
