--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -9,6 +9,7 @@
     padding: 10px;
     margin: 5px;
     overflow-y: scroll;
+    overflow-x: hidden;
     .message {
       display: flex;
       flex-direction: row;
@@ -41,7 +42,11 @@
         padding: 10px;
         border-radius: 8px;
         margin-left: 20px;
-
+        max-width: calc(100% - 90px);
+        .text {
+          word-wrap: break-word;
+          overflow: auto;
+        }
         &::after {
           content: '';
           position: absolute;
@@ -83,7 +88,7 @@
     .inputBlock {
       position: relative;
       padding: 0 10px;
-      width: calc(100% - 100px);
+      width: calc(100% - 140px);
 
       input {
         width: 100%;
@@ -120,7 +125,7 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
-      width: 100px;
+      width: 110px;
       height: 40px;
       padding: 5px;
 
