--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -13,49 +13,67 @@
     .message {
       display: flex;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-content: space-between;
       align-items: center;
       &:not(:first-child) {
         margin-top: 10px;
       }
-
-      .user {
+      .leftSide {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
-
-        img {
-          width: 50px;
-          height: 50px;
+        max-width: calc(100% - 90px);
+        .user {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+  
+          img {
+            width: 50px;
+            height: 50px;
+          }
+  
+          .userName {
+            font-size: 14px;
+            color: #c7c7c7;
+          }
         }
-
-        .userName {
-          font-size: 14px;
-          color: #c7c7c7;
+  
+        .cloudMessage {
+          position: relative;
+          background-color: #b1b1b1;
+          height: fit-content;
+          padding: 10px;
+          border-radius: 8px;
+          margin-left: 20px;
+          max-width: inherit;
+          .text {
+            word-wrap: break-word;
+            overflow: auto;
+          }
+          &::after {
+            content: '';
+            position: absolute;
+            left: -12px;
+            bottom: 50%;
+            transform: translateY(50%);
+            border: 6px solid transparent;
+            border-right: 6px solid #b1b1b1;
+            border-top: 6px solid #b1b1b1;
+          }
         }
       }
-
-      .cloudMessage {
-        position: relative;
-        background-color: #b1b1b1;
-        height: fit-content;
-        padding: 10px;
-        border-radius: 8px;
-        margin-left: 20px;
-        max-width: calc(100% - 90px);
-        .text {
-          word-wrap: break-word;
-          overflow: auto;
-        }
-        &::after {
-          content: '';
-          position: absolute;
-          left: -12px;
-          bottom: 50%;
-          transform: translateY(50%);
-          border: 6px solid transparent;
-          border-right: 6px solid #b1b1b1;
-          border-top: 6px solid #b1b1b1;
+      .rightSide {
+        display: flex;
+        flex-direction: column;
+        margin: 0 5px;
+        div {
+          text-align: end;
+          font-size: 13px;
+          color: #c7c7c7;
+          &:not(:first-child) {
+            margin-top: 3px;
+          }
         }
       }
     }
