--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -16,7 +16,9 @@
       justify-content: space-between;
       align-items: center;
       &:not(:first-child) {
-        margin-top: 10px;
+        margin-top: 5px;
+        padding-top: 5px;
+        border-top: 1px solid #333333;
       }
       .leftSide {
         display: flex;
@@ -65,14 +67,30 @@
       }
       .rightSide {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         margin: 0 5px;
-        div {
-          text-align: end;
-          font-size: 13px;
-          color: #c7c7c7;
-          &:not(:first-child) {
-            margin-top: 3px;
+        .date {
+          display: flex;
+          flex-direction: column;
+          div {
+            text-align: end;
+            font-size: 13px;
+            color: #c7c7c7;
+            &:not(:first-child) {
+              margin-top: 3px;
+            }
+          }
+        }
+        .buttonDeleteMessage {
+          margin-left: 8px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          &:hover {
+            cursor: pointer;
+          }
+          img {
+            width: 15px;
           }
         }
       }
