--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -107,6 +107,20 @@
     }
   }
 
+  .fetching {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    img {
+      width: 35px;
+      height: 35px;
+      animation-name: rotation;
+      animation-duration: 1.5s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+    }
+  }
 
   .createMessage {
     background-color: rgb(63, 63, 63);
