--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -105,20 +105,19 @@
       border-radius: 8px;
       background-color: #1d1d1d;
     }
-  }
-
-  .fetching {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px;
-    img {
-      width: 35px;
-      height: 35px;
-      animation-name: rotation;
-      animation-duration: 1.5s;
-      animation-iteration-count: infinite;
-      animation-timing-function: ease-in-out;
+    .fetching {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 40px;
+      img {
+        width: 35px;
+        height: 35px;
+        animation-name: rotation;
+        animation-duration: 1.5s;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
+      }
     }
   }
 
@@ -209,5 +208,14 @@
         }
       }
     }
+  }
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
